[package]
authors = ["Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2021"
name    = "do-not-expose-admission-controller-webhook-services"
version = "1.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.25", default-features = false, features = [
  "v1_31",
] }
kubewarden-policy-sdk = { version = "0.14.0", features = ["cluster-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall     = "0.13"
serial_test = "3.2"
